# pre2k

./: LICENSE.md  README.md  pre2k.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pre2k/: __main__.py  logger.py
pre2k/lib/: gettgt.py  ldap.py  machine_hunter.py  pre_2k.py
pre2k/lib/commands/: __init__.py  auth.py  unauth.py
