[tool.poetry]
name = "pre2k"
version = "3.0"
description = "Tool to query for the existence of pre-windows 2000 computer objects"
authors = ["garrfoster", "Tw1sm"]

[tool.poetry.dependencies]
python = "^3.9"
impacket = "0.10.0"
ldap3 = {git = "https://github.com/ly4k/ldap3"}
pyasn1 = "0.4.8"
rich = "12.5.1"
typer = "^0.6.1"
pycryptodome = "3.20.0"
click = "8.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pre2k = "pre2k.__main__:app"
